# WhatsApp-Chat-Analyser

./: .gitignore  .travis.yml  LICENSE  README.md  SampleNotebook.ipynb  WhatsApp_analyser_ver3.ipynb  author.py  chat.py  requirements.txt  setup.cfg
.ipynb_checkpoints/: WhatsApp_analyser_ver3-checkpoint.ipynb
WhatsappChatAnalyser/: ExampleNotebook.ipynb  SampleNotebook.ipynb  Sentiment.py  Test_data.csv  Untitled.ipynb  WhatsApp Chat with UW MSDS Fall21.txt  WhatsApp.py  WhatsappChatAnalyser  WhatsappChatAnalyser.py  author.py  chat.py  chat_test.py  group.py  sentiment.py  sentiment_test.py  test.py  whatsapp_chat_sentiment.py  whatsapp_chat_visualizer.py  whatsapp_text_cleaner.py
WhatsappChatAnalyser/.ipynb_checkpoints/: SampleNotebook-checkpoint.ipynb  WhatsApp_analyser-checkpoint.ipynb
WhatsappChatAnalyser/tests/: Test_data.csv  __init__.py  test_group.py  test_visualizer.py  test_whatsapp_chat_sentiment.py  test_whatsapp_text_cleaner.py
tests/: chat_test.py  test_group.py
whatsapp_chat_analyser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
