
[metadata]
name = whatsapp_chat_analyser
version = 0.0.1
author=Khirod Sahoo, Anushka Singh, Ananya Sharma, Aishwarya Singh
author_email = ksahoo@uw.edu, anushka8@uw.edu, ananya03@uw.edu, aish25@uw.edu
description = For cleaning, visualizing, and inferring sentiment from an input WhatsApp Chat
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aishwarya-singh25/WhatsApp-Chat-Analyser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True